tests/ui/specialization/issue-51892.stderr
error: hi
  --> $DIR/issue-51892.rs:9:1
   |
LL | pub trait Trait {
   | --------------- built-in `dyn Trait<Type = _>` implementation for this trait
...
LL | impl<T: ?Sized> Trait for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: unconstrained generic constant
  --> $DIR/issue-51892.rs:14:17
   |
LL |     type Type = [u8; std::mem::size_of::<<T as Trait>::Type>()];
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound
   |
LL |     type Type = [u8; std::mem::size_of::<<T as Trait>::Type>()] where [(); std::mem::size_of::<<T as Trait>::Type>()]:;
   |                                                                 ++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

